<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="vm"
            type="com.example.mvvm_example.viewmodel.CalculatorViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/calculation_inputs"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:paddingBottom="26dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_tip_calculator"
        tools:context=".view.TipCalculatorActivity">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_check_amount"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_margin="8dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_check_amount"
                android:hint="@string/input_check_amount_hint"
                android:text="@={vm.inputCheckAmount}"
                android:inputType="numberDecimal"
                android:selectAllOnFocus="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_tip_percentage"
            app:layout_constraintTop_toBottomOf="@+id/input_layout_check_amount"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_margin="8dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_tip_percentage"
                android:hint="@string/input_tip_percentage"
                android:text="@={vm.inputTipPercentage}"
                android:inputType="number"
                android:selectAllOnFocus="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/calculation_outputs"
            android:baselineAligned="false"
            app:layout_constraintTop_toBottomOf="@id/input_layout_tip_percentage"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:paddingTop="16dp"
            android:paddingBottom="32dp"
            android:layout_margin="8dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/bill_amount"
                    android:text="@{vm.outputCheckAmount}"
                    tools:text="$20.00"
                    style="@style/TextAppearance.AppCompat.Large"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/bill_amount_label"
                    android:textAlignment="center"
                    android:text="@string/check_amount_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tip_amount"
                    android:text="@{vm.outputTipAmount}"
                    tools:text="$1.50"
                    style="@style/TextAppearance.AppCompat.Large"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/tip_amount_label"
                    android:textAlignment="center"
                    android:text="@string/tip_amount_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/grand_total"
                    android:text="@{vm.outputGrandTotal}"
                    tools:text="$21.50"
                    style="@style/TextAppearance.AppCompat.Large"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/grand_total_label"
                    android:textAlignment="center"
                    android:text="@string/grand_total_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>


        </LinearLayout>

        <TextView
            android:id="@+id/calculation_name"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/calculation_outputs"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:text="Travellers Coffee"
            android:text="@{vm.locationName}"
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>