<resources>
    <string name="app_name">mvvm-example</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="input_check_amount_hint">Check</string>
    <string name="input_tip_percentage">Tip Percentage</string>
    <string name="grand_total_label">Total</string>
    <string name="tip_amount_label">Tip</string>
    <string name="check_amount_label">Check</string>
    <string name="dollar_amount">$%1$.02f</string>

    <string name="save_hint">Enter Location</string>

    <string name="action_save">Save</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_load">Load</string>
    <string name="action_dialog_save">Save</string>
</resources>
